adding adaptive layout

--- a/src/index.html
+++ b/src/index.html
@@ -55,33 +55,40 @@
     <div class="about">
         <div class="about_block">
             <div class="about__num">
-                <span>20</span>
+                <span class="about__num bigNum">20</span>
             </div>
             <div class="about__bottom_content">
-                <button class="button text400__regular">Текстовая версия</button>
-                <p class="share__text text400__regular">Поделиться</p>
+                <button class="button p1">Текстовая версия</button>
+                <p class="share__text p2">Поделиться</p>
                 <share-items></share-items>
             </div>
         </div>
         <div class="about_text">
-            <h1 class="about__title text700__title">самых успешных предпринимателей в фудтехе</h1>
-            <h3 class="about__text text500__title">Русбейс публикует первый по счету список «самых богатых предпринимателей» —
-                молодых людей, которые работают на передовых направлениях и создают новую экономику и культуру
-                страны</h3>
+            <div style="display: flex">
+                <span class="mobile bigNum">20</span>
+                <h1 class="text__title h1">самых успешных предпринимателей в <span class="title__variable"></span></h1>
+            </div>
+<!--            <h1 class="text__title h1">самых успешных предпринимателей в <span class="title__variable"></span></h1>-->
+            <h3 class="text__subtitle h3">Русбейс публикует первый по счету список «самых богатых предпринимателей» — молодых людей, которые работают на передовых направлениях и создают новую экономику и культуру страны</h3>
             <div class="about__subtext">
-                <p class="text400__main">«Секрет» представляет ежегодный рейтинг самых активных российских
+                <p class="p1">«Секрет» представляет ежегодный рейтинг самых активных российских
                     бизнес-ангелов, составленный Firrma Group при поддержке РВК и Национальной ассоциации бизнес-ангелов
                     (НАБА).</p>
-                <p class="text400__main">Участники — частные инвесторы, для которых вложения в российские
+                <p class="p1">Участники — частные инвесторы, для которых вложения в российские
                     и зарубежные стартапы являются основным бизнесом, а не хобби или меценатством. Главный критерий,
                     определяющий место в рейтинге, — количество сделок в 2016 году, получивших публичное
                     подтверждение.</p>
-                <p class="text400__main">Основной критерий, согласно которому выстраивался список — число
+                <p class="p1">Основной критерий, согласно которому выстраивался список — число
                     проинвестированных проектов за год. Эффективность инвестиций
                     на этом непрозрачном рынке сравнить невозможно.</p>
-                <p class="text400__main">С подробной методологией вы можете ознакомиться <a href="#">ниже.</a>
+                <p class="p1">С подробной методологией вы можете ознакомиться <a href="#">ниже.</a>
                 </p>
             </div>
+<!--            <div class="mobile">-->
+<!--                <button class="button p1">Текстовая версия</button>-->
+<!--                <p class="share__text p2">Поделиться</p>-->
+<!--                <share-items></share-items>-->
+<!--            </div>-->
         </div>
     </div>
     <div class="persons">
@@ -89,21 +96,21 @@
     </div>
 </main>
 <footer class="footer container">
-    <button class="button text400__regular">Текстовая версия</button>
-    <h3 class="footer__title text500__title ">Методология</h3>
+    <button class="button p1">Текстовая версия</button>
+    <h3 class="footer__title h3 ">Методология</h3>
     <div class="footer__text">
-        <p class="text400__main">По-прежнему мы не включаем в наш список людей из многочисленной категории «наследники». Не потому, что сомневаемся в их перспективности, — напротив: дети крупных бизнесменов, влиятельных чиновников и государственных деятелей часто могут выглядеть перспективнее любого из наших героев. Правда, только при условии, что их отцы сохранят деньги, влияние и власть: смогли бы они сохранить свой потенциал в честной рыночной борьбе, мы не знаем, поэтому считаем несправедливым ставить их в один ряд с людьми, начинавшими с гораздо более скромных стартовых условий.</p>
-        <p class="text400__main">Фамилий в итоговом варианте топ-20 могло быть больше, но если в одном проекте или компании нашим критериям соответствовали несколько человек, мы выбирали одного безусловного лидера или ключевого участника. Каждый из финалистов представляет определенное направление, отрасль, сектор, и чтобы получить как можно более широкую картину «будущего», мы оставили по одному человеку на сектор. Почти всегда таких людей в нем было больше, и одного из них мы выбирали хоть и на основании множества разных фактов, но в конечном счете совершенно субъективно. Присваивать участникам какие-то места мы не стали, они расставлены в произвольном порядке.</p>
-        <div class="text400__main">
+        <p class="p1">По-прежнему мы не включаем в наш список людей из многочисленной категории «наследники». Не потому, что сомневаемся в их перспективности, — напротив: дети крупных бизнесменов, влиятельных чиновников и государственных деятелей часто могут выглядеть перспективнее любого из наших героев. Правда, только при условии, что их отцы сохранят деньги, влияние и власть: смогли бы они сохранить свой потенциал в честной рыночной борьбе, мы не знаем, поэтому считаем несправедливым ставить их в один ряд с людьми, начинавшими с гораздо более скромных стартовых условий.</p>
+        <p class="p1">Фамилий в итоговом варианте топ-20 могло быть больше, но если в одном проекте или компании нашим критериям соответствовали несколько человек, мы выбирали одного безусловного лидера или ключевого участника. Каждый из финалистов представляет определенное направление, отрасль, сектор, и чтобы получить как можно более широкую картину «будущего», мы оставили по одному человеку на сектор. Почти всегда таких людей в нем было больше, и одного из них мы выбирали хоть и на основании множества разных фактов, но в конечном счете совершенно субъективно. Присваивать участникам какие-то места мы не стали, они расставлены в произвольном порядке.</p>
+        <div class="p1">
             <p>Подробнее на Русбейс:</p>
             <a href="#">https://www.rb.ru/rating20</a>
         </div>
     </div>
     <div class="footer__share">
-        <p class="share__text text400__regular">Поделиться</p>
+        <p class="share__text p1">Поделиться</p>
         <share-items></share-items>
     </div>
-    <p class="footer__copyright text400__regular">(c) Rusbase, 2019</p>
+    <p class="footer__copyright p2">(c) Rusbase, 2019</p>
 </footer>
 </body>
 </html>
