--- a/src/index.html
+++ b/src/index.html
@@ -84,11 +84,11 @@
                 <p class="p1">С подробной методологией вы можете ознакомиться <a href="#">ниже.</a>
                 </p>
             </div>
-<!--            <div class="mobile">-->
-<!--                <button class="button p1">Текстовая версия</button>-->
-<!--                <p class="share__text p2">Поделиться</p>-->
-<!--                <share-items></share-items>-->
-<!--            </div>-->
+            <div class="mobile">
+                <button class="button p1">Текстовая версия</button>
+                <p class="share__text p2">Поделиться</p>
+                <share-items></share-items>
+            </div>
         </div>
     </div>
     <div class="persons">
